--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,11 +4,12 @@
 	"editor.tabSize": 2,
 	"editor.detectIndentation": true,
 	"editor.codeActionsOnSave": {
-		"source.fixAll.eslint": true
+		"source.fixAll.eslint": "explicit"
 	},
 	"editor.wordWrap": "wordWrapColumn",
 	"editor.wordWrapColumn": 120,
 	"files.eol": "\r\n",
 	"files.insertFinalNewline": true,
-	"files.trimTrailingWhitespace": true
+	"files.trimTrailingWhitespace": true,
+	"liveServer.settings.port": 5501
 }
